--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "md5": "^2.2.1",
     "md5-typescript": "^1.0.5",
