--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.19.2",
     "boostrap": "^2.0.0",
     "bootstrap": "^4.4.1",
+    "gh-pages": "^2.2.0",
     "md5": "^2.2.1",
     "md5-typescript": "^1.0.5",
     "react": "^16.12.0",
@@ -46,5 +47,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+ "homepage" : "https://Ahder.github.io/BookingApp"
 }
